--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/bikeapp
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=create
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
