--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,12 +10,14 @@
 	</parent>
 	<groupId>com.assignment</groupId>
 	<artifactId>bikeapp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+
+	<version>1.0.0</version>
 	<name>bikeapp</name>
 	<description>Solita Dev Academy pre-assignment</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+<!--	<packaging>jar</packaging>-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -24,12 +26,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
